[package]
name = "kvm-prac"
version = "0.1.0"
authors = ["Xiwen Li <funfoolsuzi@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
vmm-sys-util = "0.2"

[build-dependencies]
bindgen = "0.50"
